--- a/WowCarLauncher/mobile/src/main/res/layout/plugin_music_ncm_launcher.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/plugin_music_ncm_launcher.xml
@@ -88,32 +88,15 @@
         android:layout_above="@id/rl_bottom"
         android:indeterminateDrawable="@android:drawable/progress_indeterminate_horizontal"
         android:max="100"
-        android:paddingRight="10dp"
         android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         android:progressDrawable="@drawable/l_music_progress" />
 
     <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/pb_music"
-        android:layout_alignParentRight="true"
-        android:ellipsize="end"
-        android:gravity="center_vertical"
-        android:lines="1"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
-        android:text="11/33"
-        android:textColor="@android:color/white"
-        app:layout_textSizePercent="6%h" />
-
-    <TextView
         android:id="@+id/tv_artist"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/pb_music"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/tv_time"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:lines="1"
@@ -130,8 +113,8 @@
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:lines="1"
-        android:paddingRight="20dp"
         android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="@string/music_name"
         android:textColor="@android:color/white"
         app:layout_textSizePercent="8%h" />
