--- a/WowCarLauncher/mobile/src/main/res/layout/popup_window.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/popup_window.xml
@@ -10,37 +10,82 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_widthPercent="50%h">
+        app:layout_widthPercent="100%h">
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/iv_xunhuan"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center">
+            android:orientation="horizontal">
 
-            <ImageView
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:id="@+id/ll_yidong"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:src="@mipmap/ic_move"
-                app:layout_heightPercent="70%h"
-                app:layout_widthPercent="70%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
 
-        <com.zhy.android.percent.support.PercentLinearLayout
-            android:id="@+id/iv_controller"
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:src="@mipmap/ic_move"
+                    app:layout_heightPercent="70%h"
+                    app:layout_widthPercent="70%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:id="@+id/ll_home"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:src="@mipmap/ic_home"
+                    app:layout_heightPercent="70%h"
+                    app:layout_widthPercent="70%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center">
+            android:orientation="horizontal">
 
-            <ImageView
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:id="@+id/ll_controller"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:src="@mipmap/ic_controller"
-                app:layout_heightPercent="70%h"
-                app:layout_widthPercent="70%h" />
-        </com.zhy.android.percent.support.PercentLinearLayout>
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:src="@mipmap/ic_controller"
+                    app:layout_heightPercent="70%h"
+                    app:layout_widthPercent="70%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+
+            <com.zhy.android.percent.support.PercentLinearLayout
+                android:id="@+id/ll_xunhuan"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center">
+
+                <ImageView
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:src="@mipmap/ic_xunhuan"
+                    app:layout_heightPercent="70%h"
+                    app:layout_widthPercent="70%h" />
+            </com.zhy.android.percent.support.PercentLinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
     <com.zhy.android.percent.support.PercentLinearLayout
