--- a/WowCarLauncher/mobile/src/main/res/layout/content_set_time.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_set_time.xml
@@ -24,4 +24,13 @@
         st:type="buttonB" />
 
     <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/tianqi_city"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="天气定位"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
 </LinearLayout>
