--- a/WowCarLauncher/mobile/src/main/res/layout/content_set_popup.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_set_popup.xml
@@ -31,10 +31,19 @@
         android:id="@+id/sv_popup_full_screen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        st:summary="@string/set_allow"
-        st:summary2="@string/set_ban"
-        st:titleEx="悬浮窗全屏显示"
+        st:summary="@string/set_yes"
+        st:summary2="@string/set_no"
+        st:titleEx="悬浮窗是否需要全屏显示"
         st:type="switchB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_popup_window_size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="悬浮窗大小"
+        st:type="buttonB" />
 
     <View style="@style/Interval" />
 
@@ -44,7 +53,7 @@
         android:layout_height="wrap_content"
         st:summary="@string/set_yes"
         st:summary2="@string/set_no"
-        st:titleEx="悬浮窗全局展示"
+        st:titleEx="悬浮窗是否忽略状态栏高度"
         st:type="checkB" />
 
     <View style="@style/Interval" />
