--- a/WowCarLauncher/mobile/src/main/res/layout/content_set_help.xml
+++ b/WowCarLauncher/mobile/src/main/res/layout/content_set_help.xml
@@ -26,6 +26,15 @@
     <View style="@style/Interval" />
 
     <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_get_newest"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="检查更新"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
         android:id="@+id/sv_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
