--- a/WowCarLauncher/mobile/src/main/res/values/colors.xml
+++ b/WowCarLauncher/mobile/src/main/res/values/colors.xml
@@ -26,8 +26,17 @@
     <color name="launch_color4">#8dcd49</color>
     <color name="launch_color5">#ea6072</color>
 
-    <color name="ncm_4_4_bg">#22000000</color>
     <color name="toolbar_bg">#99000000</color>
     <color name="launch_dock_bg">#99000000</color>
-    <color name="launch_quick_bg">#000</color>
+    <color name="launch_gps_noinfo">#99000000</color>
+
+
+    <color name="color_red">#FF5722</color>
+    <color name="color_orange">#FF9800</color>
+    <color name="color_yellow">#FFC107</color>
+    <color name="color_green">#3FB830</color>
+    <color name="color_blue">#00BAED</color>
+    <color name="color_dark">#263238</color>
+    <color name="color_dark_light">#455A64</color>
+    <color name="color_light">#ECEFF1</color>
 </resources>
